added ingredient list

--- a/recipes/skilletlasagna.html
+++ b/recipes/skilletlasagna.html
@@ -6,6 +6,23 @@
     </head>
     <body>
         <h1>Skillet Lasagna Recipe</h1>
-        <img src="../img/skilletlasagna.jpg" alt = 'dickpic'/>
+        <!-- Needed ../ to pull from previous directory -->
+        <img src="../img/skilletlasagna.jpg" alt = 'yummy skillet lasagna'/>
+        <h3>Description</h3>
+        <p>Who doesn't want a quick dinner? This no-bake skillet lasagna is made right on your stovetop and you don't even have to heat up your oven. It is also a fast and easy alternative to store-bought hamburger mixes!</p>
+        <h3>Ingredients</h3>
+            <ul>
+                <li>1&sol;2 pound ground beef</li>
+                <li>1&sol;2 &lpar;28 ounce&rpar; jar spaghetti sauce</li>
+                <li>1 &lpar;14.5 ounce&rpar; can diced tomatoes</li>
+                <li>1&sol;2 onion, chopped</li>
+                <li>1 clove garlic, minced</li>
+                <li>2 teaspoons dried basil &lpar;Optional&rpar;</li>
+                <li>2 teaspoons dried oregano &lpar;Optional&rpar;</li>
+                <li>1 teaspoon salt</li>
+                <li>1 teaspoon black pepper</li>
+                <li>2 cups dried mafalda noodles</li>
+                <li>1 cup shredded mozzarella cheese</li>
+            </ul>
     </body>
 </html>
