--- a/recipes/skilletlasagna.html
+++ b/recipes/skilletlasagna.html
@@ -24,5 +24,14 @@
                 <li>2 cups dried mafalda noodles</li>
                 <li>1 cup shredded mozzarella cheese</li>
             </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>Heat a large skillet over medium-high heat. Cook and stir beef in the hot skillet until browned and crumbly, 5 to 7 minutes. Drain and discard grease. Add spaghetti sauce, tomatoes, onion, garlic, basil, oregano, salt, and pepper. Cook over low heat until sauce is hot, about 15 minutes.</li>
+                <li>Meanwhile, fill a large pot with lightly salted water and bring to a rolling boil. Cook mafalda noodles at a boil until tender yet firm to the bite, about 8 minutes. Drain.</li>
+                <li>Add cooked and drained noodles to the sauce and stir until completely coated. Sprinkle mozzarella cheese on top.</li>
+                <li>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler.</li>
+                <li>Place skillet under the hot broil and cook until cheese is golden and bubbly, 3 to 5 minutes.</li>
+            </ol>
+        <h5>&ast;You can use ground turkey in place of beef, if you like.&midast;</h5>
     </body>
 </html>
