--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/skilletlasagna.html">Lasagna Recipe</a>
+        <p><a href="recipes/shreddedpotatoquiche.html">Shredded Potato Quiche Recipe</a></p>
+        <p><a href="recipes/skilletlasagna.html">Lasagna Recipe</a></p>
     </body>
 </html>
