finished quiche recipe

--- a/recipes/shreddedpotatoquiche.html
+++ b/recipes/shreddedpotatoquiche.html
@@ -10,5 +10,22 @@
         <h3>Description</h3>
         <p>This quiche has a crunchy potato crust. It is a good one dish meal and a great was to use leftovers!</p>
         <p>&ast;You may use 1 cup chopped vegetables of your choosing, such as onions, peppers, broccoli or tomatoes.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 &lpar;16 ounce&rpar; pachage frozen shredded hash brown potatoes, thawed</li>
+            <li>&frac14; cup butter, melted</li>
+            <li>5 eggs, lightly beaten</li>
+            <li>1 &frac12; cups shredded Swiss cheese</li>
+            <li>1 cup cooked ham</li>
+            <li>&frac14; cup milk</li>
+            <li>salt and pepper to taste</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 375&deg; F &lpar;190&deg; C&rpar;. Lightly grease a 9 inch pie pan.</li>
+            <li>Press potatoes into greased pie plate. Brush with melted butter. Bake in preheated oven until lightly browned, about 10 to 15 minutes.</li>
+            <li>In a large bowl, stir together beaten eggs, milk, cheese, ham, salt and pepper. Pour egg mixture into baked crust.</li>
+            <li>Bake in preheated oven until center is set, about 20 minutes. The quiche will be browned on top and a knife inserted into the center will come out clean.</li>
+        </ol>
     </body>
 </html>
