--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/shreddedpotatoquiche.html">Shredded Potato Quiche Recipe</a></p>
-        <p><a href="recipes/skilletlasagna.html">Lasagna Recipe</a></p>
+       <ul>
+           <li><a href="recipes/shreddedpotatoquiche.html">Shredded Potato Quiche Recipe</a></li>
+           <li><a href="recipes/skilletlasagna.html">Lasagna Recipe</a></li>
+        </ul>
     </body>
 </html>
