--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
        <ul>
            <li><a href="recipes/shreddedpotatoquiche.html">Shredded Potato Quiche Recipe</a></li>
            <li><a href="recipes/skilletlasagna.html">Lasagna Recipe</a></li>
+           <li><a href="recipes/peachcobbler.html">Peach Cobbler Recipe</a></li>
         </ul>
     </body>
 </html>
