added steps and finished recipe

--- a/recipes/peachcobbler.html
+++ b/recipes/peachcobbler.html
@@ -21,5 +21,12 @@
                 <li>1 &frac12; teaspoons baking powder</li>
                 <li>&frac14; teaspoon salt</li>
             </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Preheat oven to 350&deg; F &lpar;175 degrees C&rpar;. Spread melted butter in a 2-quart baking dish.</li>
+                <li>Heat peaches, &frac23; cup sugar, and water in a saucepan over medium-high heat, stirring occasional, until slightly thickened, about 5 minutes&semi; remove from heat.</li>
+                <li>Mix flour, 1 cup sugar, milk, baking powder, and salt in a bowl until batter is combined&semi; pour over melted butter in baking dish. Arrange peaches over the batter and pour any remaining liquid on top.</li>
+                <li>Bake in preheated oven until golden brown, 40 to 45 minutes.</li>
+            </ol>
     </body>
 </html>
